added querying and formatting changes

--- a/Benutech Data Modeling.ipynb
+++ b/Benutech Data Modeling.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "from lifelines.datasets import load_rossi\n",
-    "from lifelines import CoxPHFitter"
+    "from lifelines import CoxPHFitter\n"
    ]
   },
   {
